[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microstate_analysis"
version = "0.2.0"
description = "EEG microstate analysis pipelines (CLI + subprocess-friendly stdout/stderr)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Tianhao Ning" }]
license = { text = "MIT" }
dynamic = ["dependencies"]

[project.scripts]
microstate-analysis = "microstate_analysis.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
# read runtime deps from requirements.txt
dependencies = { file = ["requirements.txt"] }